--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="/public/index.css" />
+    <link rel="stylesheet" href="/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -49,7 +49,7 @@
       <div class="container">
         <div class="row">
           <div class="about-col-1">
-            <img src="/public/images/me.jpeg" alt="me" />
+            <img src="/images/me.jpeg" alt="me" />
           </div>
           <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
@@ -188,7 +188,7 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
           <div class="work">
-            <img src="/public/images/work-1.png" alt="" />
+            <img src="/images/work-1.png" alt="" />
             <div class="layer">
               <h3>Weather App</h3>
               <p>
@@ -204,7 +204,7 @@
             </div>
           </div>
           <div class="work">
-            <img src="/public/images/work-2.png" alt="" />
+            <img src="/images/work-2.png" alt="" />
             <div class="layer">
               <h3>Quiz App</h3>
               <p>
@@ -217,7 +217,7 @@
             </div>
           </div>
           <div class="work">
-            <img src="/public/images/work-3.png" alt="" />
+            <img src="/images/work-3.png" alt="" />
             <div class="layer">
               <h3>Calculator App</h3>
               <p>
