--- a/index.html
+++ b/index.html
@@ -54,19 +54,20 @@
           <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-              vel, totam voluptatibus numquam minima sit recusandae dolorem
-              perspiciatis ratione adipisci officiis voluptate tenetur odio unde
-              velit similique voluptas quibusdam corrupti. Sed reiciendis
-              doloribus aspernatur quasi necessitatibus corrupti, beatae quae
-              eos modi, culpa possimus quidem? Maiores cupiditate autem ducimus
-              laudantium minus, molestiae corporis a! Voluptatum deserunt
-              aperiam quod natus placeat nisi cumque cum impedit debitis
-              asperiores corporis cupiditate, totam reiciendis fugit porro quae
-              sit incidunt molestiae reprehenderit fuga facilis consequatur.
-              Sapiente facilis quam quisquam perspiciatis dolor quia, minima
-              repellat nisi sint vero nihil commodi, pariatur, cumque adipisci
-              error corrupti voluptates aliquam?
+              Hi there! I'm a passionate frontend developer with a keen eye for
+              design and a love for crafting engaging, user-friendly web
+              experiences. I specialize in transforming creative ideas into
+              responsive, functional, and visually appealing websites. With a
+              solid foundation in HTML, CSS, and JavaScript, I also leverage
+              modern frameworks and libraries like React to build dynamic and
+              interactive web applications. My focus is always on delivering
+              clean, efficient code and ensuring seamless performance across
+              devices. When I'm not coding, I enjoy exploring new design trends,
+              learning about emerging technologies, and collaborating with other
+              developers to bring innovative projects to life. I'm driven by the
+              challenge of turning complex problems into simple, elegant
+              solutions that users love. Let’s connect and create something
+              amazing together!
             </p>
             <div class="tab-titles">
               <p class="tab-links active-link" onclick="opentab('skills')">
@@ -182,13 +183,50 @@
       </div>
     </div>
 
+    <!-- --------------Tools I Use--------------- -->
+
+    <section id="tools" class="tools-section">
+      <h2 class="sub-title">Tools I Use</h2>
+      <div class="tools-container">
+        <!-- Tool Item -->
+        <div class="tool-item">
+          <img src="/images/htmlLogo.png" alt="HTML Logo" />
+          <p>HTML</p>
+        </div>
+        <div class="tool-item">
+          <img src="/images/cssLogo.png" alt="CSS Logo" />
+          <p>CSS</p>
+        </div>
+        <div class="tool-item">
+          <img src="/images/jsLogo.png" alt="JavaScript Logo" />
+          <p>JavaScript</p>
+        </div>
+        <div class="tool-item">
+          <img src="/images/reactLogo.png" alt="React Logo" />
+          <p>React</p>
+        </div>
+        <div class="tool-item tailwindc">
+          <img src="/images/tailLogo.png" alt="Tailwind CSS Logo" />
+          <p>Tailwind CSS</p>
+        </div>
+        <div class="tool-item">
+          <img src="/images/bootstrapLogo.png" alt="Bootstrap Logo" />
+          <p>Bootstrap</p>
+        </div>
+        <div class="tool-item">
+          <img src="/images/nodeLogo.png" alt="Node JS Logo" />
+          <p>Node JS</p>
+        </div>
+      </div>
+    </section>
+
     <!-- portfolio/mywork -->
     <div id="portfolio">
       <div class="container">
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
           <div class="work">
-            <img src="/images/work-1.png" alt="" />
+            <img src="/images/weather.png" alt="" />
             <div class="layer">
               <h3>Weather App</h3>
               <p>
@@ -204,27 +242,34 @@
             </div>
           </div>
           <div class="work">
-            <img src="/images/work-2.png" alt="" />
+            <img src="/images/knowledge.png" alt="" />
             <div class="layer">
               <h3>Quiz App</h3>
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Maxime, neque?
+                The General Knowledge Quiz App is a fun and interactive platform
+                built using vanilla JavaScript, HTML, and CSS to test users'
+                knowledge on a variety of topics. It provides an engaging
+                experience with multiple-choice questions, a countdown timer,
+                and a score tracking system to challenge users in their quest to
+                improve their general knowledge.
               </p>
-              <a href="#"
+              <a href="https://fastidious-smakager-bf7307.netlify.app/"
                 ><i class="fa-solid fa-arrow-up-right-from-square"></i
               ></a>
             </div>
           </div>
           <div class="work">
-            <img src="/images/work-3.png" alt="" />
+            <img src="/images/reactimage2.png" alt="" />
             <div class="layer">
-              <h3>Calculator App</h3>
+              <h3>React Jobs</h3>
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Maxime, neque?
+                ReactJobs is a modern and intuitive web platform designed to
+                connect job seekers with opportunities in the tech industry.
+                Built with React, it provides a seamless user experience for
+                browsing, searching, and applying for jobs tailored specifically
+                for React developers.
               </p>
-              <a href="#"
+              <a href="https://reactjobswebsite.vercel.app/"
                 ><i class="fa-solid fa-arrow-up-right-from-square"></i
               ></a>
             </div>
