--- a/index.html
+++ b/index.html
@@ -236,7 +236,9 @@
                 stay informed about current conditions, temperature, humidity,
                 wind speed, and more.
               </p>
-              <a href="https://classy-dolphin-c65dee.netlify.app"
+              <a
+                href="https://classy-dolphin-c65dee.netlify.app"
+                target="_blank"
                 ><i class="fa-solid fa-arrow-up-right-from-square"></i
               ></a>
             </div>
@@ -253,7 +255,9 @@
                 and a score tracking system to challenge users in their quest to
                 improve their general knowledge.
               </p>
-              <a href="https://fastidious-smakager-bf7307.netlify.app/"
+              <a
+                href="https://fastidious-smakager-bf7307.netlify.app/"
+                target="_blank"
                 ><i class="fa-solid fa-arrow-up-right-from-square"></i
               ></a>
             </div>
@@ -269,7 +273,7 @@
                 browsing, searching, and applying for jobs tailored specifically
                 for React developers.
               </p>
-              <a href="https://reactjobswebsite.vercel.app/"
+              <a href="https://reactjobswebsite.vercel.app/" target="_blank"
                 ><i class="fa-solid fa-arrow-up-right-from-square"></i
               ></a>
             </div>
