--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 provide real-time weather updates for your location and beyond.
                 With a clean interface and easy-to-use features, it helps users
                 stay informed about current conditions, temperature, humidity,
-                wind speed, and more.
+                and wind speed.
               </p>
               <a
                 href="https://classy-dolphin-c65dee.netlify.app"
